Fix footer being justify aligned

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -127,6 +127,10 @@ a:hover {
   padding-top: 12px;
 }
 
+.site footer div {
+  text-align: left;
+}
+
 .site footer div + div {
   text-align: right;
 }
